--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
         </form>
         <p>
         Credits: The information regarding the benefits of organic food is NOT to be taken as medical advice. All information is the opinion of the author. The information/text belong to Sahan Asad, from his article published on https://grillheataid.com
-        None of the images belong to me. All images are owned by their respective owners. Use of the images and text are purely for educational purposes. Copyrights of images belong to the following: mews-medical.net, momblogsociety.com, momtrends.com, unb.com.bd, digest.bps.org.uk, propanegeorgia.com, 123rf.com.
+        All images are owned by their respective owners. Use of the images and text are purely for educational purposes. Copyrights of images belong to the following: mews-medical.net, momblogsociety.com, momtrends.com, unb.com.bd, digest.bps.org.uk, propanegeorgia.com, 123rf.com.
 
       </p>
   </body>
